fix: Align left sidebar content to right on mobile

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -103,5 +103,6 @@ a {
 @media (max-width: 800px) {
   .sidebar.left {
     flex-wrap: wrap;
+    justify-content: flex-end;
   }
 }
